RESOLVED FIXED275718
[Cocoa] CRASH in HTMLMediaElement::loadResource()
https://bugs.webkit.org/show_bug.cgi?id=275718
Summary [Cocoa] CRASH in HTMLMediaElement::loadResource()
Jer Noble
Reported 2024-06-20 17:51:49 PDT
[Cocoa] CRASH in HTMLMediaElement::loadResource()
Attachments
Jer Noble
Comment 1 2024-06-20 17:51:52 PDT
Jer Noble
Comment 2 2024-06-20 17:57:09 PDT
EWS
Comment 3 2024-06-21 09:25:54 PDT
Committed 280251@main (d8035e9cf316): <https://commits.webkit.org/280251@main> Reviewed commits have been landed. Closing PR #30029 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.