Cherry-pick 280251@main (d8035e9cf316). https://bugs.webkit.org/show_bug.cgi?id=275718

[Cocoa] CRASH in HTMLMediaElement::loadResource()
    https://bugs.webkit.org/show_bug.cgi?id=275718
    rdar://129570289

    Reviewed by Eric Carlson.

    From crashlogs, loadResource() is being called when m_player is null. This should not be possible,
    as the only site that clears m_player is clearMediaPlayer(), which cancels the task which calls
    loadResource().

    Null-check m_player, but leave an ASSERT_NOT_REACHED() in its place, to hopefully catch this state
    in debug builds and layout tests.

    * Source/WebCore/html/HTMLMediaElement.cpp:
    (WebCore::HTMLMediaElement::loadResource):

    Canonical link: https://commits.webkit.org/280251@main

Canonical link: https://commits.webkit.org/274313.420@webkitglib/2.44